fixed contrast issue

--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -245,14 +245,13 @@ form legend {
   padding: 0.2rem;
   font-size: 1.2rem;
   font-family: "Catamaran", sans-serif;
-  color: whitesmoke;
-  text-shadow: 1px 1px darkslategray;
+  color: black;
 }
 
 form fieldset {
   margin-top: 2rem;
   border-radius: 1rem;
-  border: 1px solid whitesmoke;
+  border: 2px solid darkslategray;
   padding: 1rem;
 }
 
